fix: fix header tel wrap

--- a/src/components/header/components/header-socials/header-socials.module.scss
+++ b/src/components/header/components/header-socials/header-socials.module.scss
@@ -3,6 +3,7 @@
   flex-grow: 1;
   display: flex;
   justify-content: end;
+  flex-basis: 390px;
 
   &__tel {
     color: var(--primary-text-color);
